test/negative/002_unterminated_string.fx
// expect: unterminated string
val s = "abc
println(s)
