test/negative/002_unterminated_string.err
002_unterminated_string.fx:2:10: error: unterminated string
